collapse fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -5285,8 +5285,8 @@ Created using IcoMoon - icomoon.io
 .section-nucleo-icons .icons-container {
   position: relative;
   max-width: 450px;
-  height: 300px;
-  max-height: 300px;
+  height: 30vw;
+  max-height: 30vw;
   margin: 0 auto;
 }
 
@@ -5599,7 +5599,7 @@ Created using IcoMoon - icomoon.io
     display: block;
     top: 0;
     height: 100% !important;
-    width: 300px;
+    width: 30vw;
     right: 0;
     z-index: 1032;
     visibility: visible;
@@ -5608,8 +5608,8 @@ Created using IcoMoon - icomoon.io
     border-top: none;
     text-align: left;
     max-height: none !important;
-    -webkit-transform: translate3d(300px, 0, 0);
-    transform: translate3d(300px, 0, 0);
+    -webkit-transform: translate3d(30vw, 0, 0);
+    transform: translate3d(30vw, 0, 0);
     -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   }
@@ -5928,7 +5928,7 @@ Created using IcoMoon - icomoon.io
     }
   }
   .sidebar-collapse [class*="navbar-expand-"] .navbar-collapse {
-    width: 300px;
+    width: 30vw;
   }
   .sidebar-collapse .wrapper {
     -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
@@ -5941,7 +5941,7 @@ Created using IcoMoon - icomoon.io
     opacity: 1;
     top: 0;
     left: auto;
-    right: 300px;
+    right: 30vw;
     content: "";
     z-index: 9999;
     overflow-x: hidden;
@@ -5952,8 +5952,8 @@ Created using IcoMoon - icomoon.io
   .sidebar-collapse.menu-on-left .navbar-collapse {
     right: auto;
     left: 0;
-    -webkit-transform: translate3d(-300px, 0, 0);
-    transform: translate3d(-300px, 0, 0);
+    -webkit-transform: translate3d(-30vw, 0, 0);
+    transform: translate3d(-30vw, 0, 0);
   }
   .nav-open .sidebar-collapse .navbar-collapse {
     -webkit-transform: translate3d(0px, 0, 0);
@@ -5964,16 +5964,16 @@ Created using IcoMoon - icomoon.io
     transform: translate3d(-150px, 0, 0);
   }
   .nav-open .sidebar-collapse .navbar-translate {
-    -webkit-transform: translate3d(-300px, 0, 0);
-    transform: translate3d(-300px, 0, 0);
+    -webkit-transform: translate3d(-30vw, 0, 0);
+    transform: translate3d(-30vw, 0, 0);
   }
   .nav-open .sidebar-collapse.menu-on-left .navbar-collapse {
     -webkit-transform: translate3d(0px, 0, 0);
     transform: translate3d(0px, 0, 0);
   }
   .nav-open .sidebar-collapse.menu-on-left .navbar-translate {
-    -webkit-transform: translate3d(300px, 0, 0);
-    transform: translate3d(300px, 0, 0);
+    -webkit-transform: translate3d(30vw, 0, 0);
+    transform: translate3d(30vw, 0, 0);
   }
   .nav-open .sidebar-collapse.menu-on-left .wrapper {
     -webkit-transform: translate3d(150px, 0, 0);
@@ -5981,7 +5981,7 @@ Created using IcoMoon - icomoon.io
   }
   .nav-open .sidebar-collapse.menu-on-left #bodyClick {
     right: auto;
-    left: 300px;
+    left: 30vw;
   }
   .bootstrap-collapse .navbar .navbar-collapse {
     background: none !important;
@@ -6314,7 +6314,7 @@ Created using IcoMoon - icomoon.io
     display: block;
     top: 0;
     height: 100% !important;
-    width: 300px;
+    width: 30vw;
     right: 0;
     z-index: 1032;
     visibility: visible;
@@ -6323,8 +6323,8 @@ Created using IcoMoon - icomoon.io
     border-top: none;
     text-align: left;
     max-height: none !important;
-    -webkit-transform: translate3d(300px, 0, 0);
-    transform: translate3d(300px, 0, 0);
+    -webkit-transform: translate3d(30vw, 0, 0);
+    transform: translate3d(30vw, 0, 0);
     -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   }
@@ -6643,7 +6643,7 @@ Created using IcoMoon - icomoon.io
     }
   }
   .burger-menu [class*="navbar-expand-"] .navbar-collapse {
-    width: 300px;
+    width: 30vw;
   }
   .burger-menu .wrapper {
     -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
@@ -6656,7 +6656,7 @@ Created using IcoMoon - icomoon.io
     opacity: 1;
     top: 0;
     left: auto;
-    right: 300px;
+    right: 30vw;
     content: "";
     z-index: 9999;
     overflow-x: hidden;
@@ -6690,8 +6690,8 @@ Created using IcoMoon - icomoon.io
   .burger-menu.menu-on-left .navbar-collapse {
     right: auto;
     left: 0;
-    -webkit-transform: translate3d(-300px, 0, 0);
-    transform: translate3d(-300px, 0, 0);
+    -webkit-transform: translate3d(-30vw, 0, 0);
+    transform: translate3d(-30vw, 0, 0);
   }
   .burger-menu [class*="navbar-expand-"] .navbar-nav .dropdown-menu {
     position: static;
@@ -6704,12 +6704,12 @@ Created using IcoMoon - icomoon.io
     display: none !important;
   }
   .nav-open .burger-menu.menu-on-left .navbar .navbar-translate {
-    -webkit-transform: translate3d(300px, 0, 0);
-    transform: translate3d(300px, 0, 0);
+    -webkit-transform: translate3d(30vw, 0, 0);
+    transform: translate3d(30vw, 0, 0);
   }
   .nav-open .burger-menu .navbar .navbar-translate {
-    -webkit-transform: translate3d(-300px, 0, 0);
-    transform: translate3d(-300px, 0, 0);
+    -webkit-transform: translate3d(-30vw, 0, 0);
+    transform: translate3d(-30vw, 0, 0);
   }
   .nav-open .burger-menu.menu-on-left .navbar-collapse {
     -webkit-transform: translate3d(0px, 0, 0);
@@ -6717,7 +6717,7 @@ Created using IcoMoon - icomoon.io
   }
   .nav-open .burger-menu.menu-on-left #bodyClick {
     right: auto;
-    left: 300px;
+    left: 30vw;
   }
   .burger-menu.menu-on-left .navbar-brand {
     float: right;
@@ -6813,8 +6813,8 @@ Created using IcoMoon - icomoon.io
 
 @media screen and (max-width: 768px) {
   .section-images {
-    height: 300px;
-    max-height: 300px;
+    height: 30vw;
+    max-height: 30vw;
   }
   .section-images .hero-images-container {
     max-width: 380px;
@@ -6856,7 +6856,7 @@ Created using IcoMoon - icomoon.io
     margin-left: 80px;
   }
   .section-images .hero-images-container {
-    max-width: 300px;
+    max-width: 30vw;
   }
   .section-images .hero-images-container-1 {
     right: 28%;
